setting up style.css and working on <header>

--- a/main.html
+++ b/main.html
@@ -5,9 +5,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <header class="main-header">
+        <div class="container flex flexrow justify-between wrap">
+            <div class="wrapper flex flexrow items-center self-start">
+                <img class="logo" src="./images/logo.png" alt="logo">
+                <span class="txt-style">Shaghayegh Sahandi</span>
+                <span>Portfolio</span>
+                <img class="icon" src="./images/dot-single-svgrepo-com.svg" alt="dot icon">
+            </div>
+            <div class="main-header__nav flex self-end">
+                <ul class="flex flexrow items-center self-center">
+                    <li><a href="#">Peek Inside My World</a></li>
+                    <li>|</li>
+                    <li><a href="#">Code Journey</a></li>
+                    <li>|</li>
+                    <li><a href="#">Activism Journey</a></li>
+                    <li>|</li>
+                    <li><a href="#">Professional Pathway</a></li>
+                    <li>|</li>
+                    <li><a href="#">Blog</a></li>
+                </ul>
+            </div>
+        </div>
+    </header>
+    <main class="container">
+
+    </main>
 
 </body>
 
