--- a/main.html
+++ b/main.html
@@ -16,14 +16,14 @@
                 <img class="logo" src="./images/logo.png" alt="logo">
                 <span class="txt-style">Shaghayegh Sahandi</span>
                 <span>Portfolio</span>
-                <img class="icon" src="./images/dot-single-svgrepo-com.svg" alt="dot icon">
+                <img class="dot align-bottom" src="./images/circle-32.png" alt="dot icon">
             </div>
-            <div class="main-header__nav flex self-end">
-                <ul class="flex flexrow items-center self-center">
+            <div class="main-header__nav flex flexrow wrap">
+                <ul class="flex flexrow wrap items-center self-center">
                     <li><a href="#">Peek Inside My World</a></li>
-                    <li>|</li>
+                    <li class="bx"></li>
                     <li><a href="#">Code Journey</a></li>
-                    <li>|</li>
+                    <li class="bx"></li>
                     <li><a href="#">Activism Journey</a></li>
                     <li>|</li>
                     <li><a href="#">Professional Pathway</a></li>
