header codes are fine, now i have to work on break points

--- a/main.html
+++ b/main.html
@@ -18,17 +18,24 @@
                 <span>Portfolio</span>
                 <img class="dot align-bottom" src="./images/circle-32.png" alt="dot icon">
             </div>
-            <div class="main-header__nav flex flexrow wrap">
+            <div class="main-header__nav flex flexcolumn wrap">
                 <ul class="flex flexrow wrap items-center self-center">
-                    <li><a href="#">Peek Inside My World</a></li>
-                    <li class="bx"></li>
+                    <li><a href="#">About me</a></li>
+                    <!-- <li><a href="#">Peek Inside My World</a></li> -->
+                    <li>|</li>
                     <li><a href="#">Code Journey</a></li>
-                    <li class="bx"></li>
+                    <li>|</li>
                     <li><a href="#">Activism Journey</a></li>
                     <li>|</li>
                     <li><a href="#">Professional Pathway</a></li>
                     <li>|</li>
                     <li><a href="#">Blog</a></li>
+                </ul>
+                <!-- <div class="line"></div> -->
+                <hr>
+                <ul class="flex flexrow wrap self-center">
+                    <li><a href="#">HOME</a></li>
+                    <li><img class="icon" src="./images/searchone.svg" alt="serach icon"></li>
                 </ul>
             </div>
         </div>
