working on content - bubble-nav

--- a/main.html
+++ b/main.html
@@ -33,7 +33,7 @@
                 </ul>
                 <!-- <div class="line"></div> -->
                 <hr>
-                <ul class="flex flexrow wrap self-center">
+                <ul class="flex flexrow wrap justify-content-right">
                     <li><a href="#">HOME</a></li>
                     <li><img class="icon" src="./images/searchone.svg" alt="serach icon"></li>
                 </ul>
@@ -41,7 +41,53 @@
         </div>
     </header>
     <main class="container">
+        <div class="content">
+            <div>
+                <img class="avatar" src="./images/sh.png" alt="Avatar">
+            </div>
+            <section>
+                <section class="txt">
+                    <h1>Hey there!</h1>
+                    <span>A Bit About Me:</span>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, laboriosam esse natus ipsam,
+                        veniam accusamus aliquid, eos eligendi iusto facere optio recusandae facilis ut quaerat quia.
+                        Exercitationem quae accusamus minus?
+                        Modi magnam vitae accusamus fugit nesciunt praesentium atque expedita debitis! Earum pariatur
+                        dolor ut quasi accusamus. Doloribus sapiente, eligendi deleniti fuga modi voluptatum adipisci
+                        maxime ipsum qui laudantium omnis et.
+                        Porro, odit possimus cupiditate quaerat sint quia laborum dolor maiores quae reprehenderit modi
+                        debitis quos odio aspernatur aliquid excepturi nihil necessitatibus vitae, amet quidem similique
+                        numquam earum iste dolore? Impedit!
+                        Eos dignissimos laudantium veniam nihil ducimus, repellendus reiciendis facilis. Cum
+                        exercitationem omnis, placeat, eius deserunt corrupti libero, laudantium a nulla quidem
+                        voluptate molestiae cumque id dolorem quas velit sunt reiciendis!
+                        Eligendi sunt a ullam itaque. Hic aut numquam facilis ex. Incidunt reiciendis ea, ipsam quas
+                        doloremque architecto molestiae maxime! Esse eligendi odio facere minima eos. Laudantium iusto
+                        consequuntur delectus dolores?</p>
+                </section>
+                <div class="bubble-nav">
+                    <ul class="flex align-items-center">
+                        <li class="bubble-link flex" id="about">
+                            <a class="flex align-self-center" href="#">About me!
+                            </a>
+                        </li>
+                        <li class="bubble-link flex" id="coding">
+                            <a class="flex align-self-center" href="#">Code journey</a>
+                        </li>
+                        <li class="bubble-link flex" id="Activism">
+                            <a class="flex align-self-center" href="#">Activism journey</a>
+                        </li>
+                        <li class="bubble-link flex" id="cv">
+                            <a class="flex align-self-center" href="#">Professional pathway</a>
+                        </li>
+                        <li class="bubble-link flex" id="blog">
+                            <a class="flex align-self-center" href="#">Blog</a>
+                        </li>
+                    </ul>
+                </div>
 
+            </section>
+        </div>
     </main>
 
 </body>
