--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 <body>
     <header class="main-header">
         <div class="container flex flexrow justify-between wrap">
-            <div class="wrapper flex flexrow items-center self-start">
+            <div class="wrapper flex flexrow align-items-center self-start">
                 <img class="logo" src="./images/logo.png" alt="logo">
                 <span class="txt-style">Shaghayegh Sahandi</span>
                 <span>Portfolio</span>
@@ -74,7 +74,7 @@
                         <li class="bubble-link flex" id="coding">
                             <a class="flex align-self-center" href="#">Code journey</a>
                         </li>
-                        <li class="bubble-link flex" id="Activism">
+                        <li class="bubble-link flex" id="activism">
                             <a class="flex align-self-center" href="#">Activism journey</a>
                         </li>
                         <li class="bubble-link flex" id="cv">
