working on footer

--- a/main.html
+++ b/main.html
@@ -10,6 +10,10 @@
 </head>
 
 <body>
+    <!--=====================================
+                HEADER
+    =======================================-->
+
     <header class="main-header">
         <div class="container flex flexrow justify-between wrap">
             <div class="wrapper flex flexrow align-items-center self-start">
@@ -40,13 +44,17 @@
             </div>
         </div>
     </header>
+
+    <!--=====================================
+                MAIN
+    =======================================-->
     <main class="container">
-        <div class="content">
-            <div>
-                <img class="avatar" src="./images/sh.png" alt="Avatar">
+        <div class="content flex flexrow justify-content-center">
+            <div class="flex">
+                <img class="avatar shadow self-center" src="./images/sh.png" alt="Avatar">
             </div>
-            <section>
-                <section class="txt">
+            <section class="flex flexcolumn">
+                <section class="txt flex flexcolumn">
                     <h1>Hey there!</h1>
                     <span>A Bit About Me:</span>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, laboriosam esse natus ipsam,
@@ -61,26 +69,24 @@
                         Eos dignissimos laudantium veniam nihil ducimus, repellendus reiciendis facilis. Cum
                         exercitationem omnis, placeat, eius deserunt corrupti libero, laudantium a nulla quidem
                         voluptate molestiae cumque id dolorem quas velit sunt reiciendis!
-                        Eligendi sunt a ullam itaque. Hic aut numquam facilis ex. Incidunt reiciendis ea, ipsam quas
-                        doloremque architecto molestiae maxime! Esse eligendi odio facere minima eos. Laudantium iusto
-                        consequuntur delectus dolores?</p>
+                        Eligendi sunt a ullam itaque.</p>
                 </section>
                 <div class="bubble-nav">
                     <ul class="flex align-items-center">
-                        <li class="bubble-link flex" id="about">
+                        <li class="bubble-link shadow flex" id="about">
                             <a class="flex align-self-center" href="#">About me!
                             </a>
                         </li>
-                        <li class="bubble-link flex" id="coding">
+                        <li class="bubble-link shadow flex" id="coding">
                             <a class="flex align-self-center" href="#">Code journey</a>
                         </li>
-                        <li class="bubble-link flex" id="activism">
+                        <li class="bubble-link shadow flex" id="activism">
                             <a class="flex align-self-center" href="#">Activism journey</a>
                         </li>
-                        <li class="bubble-link flex" id="cv">
+                        <li class="bubble-link shadow flex" id="cv">
                             <a class="flex align-self-center" href="#">Professional pathway</a>
                         </li>
-                        <li class="bubble-link flex" id="blog">
+                        <li class="bubble-link shadow flex" id="blog">
                             <a class="flex align-self-center" href="#">Blog</a>
                         </li>
                     </ul>
@@ -90,6 +96,51 @@
         </div>
     </main>
 
+    <!--=====================================
+                FOOTER
+    =======================================-->
+    <footer class="container">
+        <hr>
+        <section class="flex flexrow">
+            <section>
+                <h3>Contact:</h3>
+                <div class="flex flexrow">
+                    <img class="icon" src="./images/phone.svg" alt="phone icon">
+                    <span>017685623723</span>
+                </div>
+                <div class="flex flexrow">
+                    <img class="icon" src="./images/email.svg" alt="email icon">
+                    <span>shaghay3gh@gmail.com</span>
+                </div>
+            </section>
+            <section>
+                <h3>Find Me:</h3>
+                <div class="flex flexrow">
+                    <img class="icon" src="./images/github.svg" alt="github icon">
+                    <span>ShaQay3Q</span>
+                </div>
+                <div class="flex flexrow">
+                    <img class="icon" src="./images/discord.svg" alt="discord icon">
+                    <span>shaghay3gh_57080</span>
+                </div>
+            </section>
+            <section>
+                <h3>Upcoming Events:</h3>
+                <div class="flex flexrow fivegap">
+                    <img class="icon" src="./images/event.svg" alt="event icon">
+                    <span>Event Name</span>
+                </div>
+                <div class="flex flexrow fivegap">
+                    <img class="icon" src="./images/event.svg" alt="event icon">
+                    <span>Event Name</span>
+                </div>
+                <div class="flex flexrow fivegap">
+                    <img class="icon" src="./images/event.svg" alt="event icon">
+                    <span>Event Name</span>
+                </div>
+            </section>
+        </section>
+    </footer>
 </body>
 
 </html>
