--- a/main.html
+++ b/main.html
@@ -99,46 +99,50 @@
     <!--=====================================
                 FOOTER
     =======================================-->
-    <footer class="container">
+    <footer class="container flex flexcolumn wrap wrapper">
         <hr>
-        <section class="flex flexrow">
-            <section>
+        <section class="flex flexrow wrap justify-evenly wrapper">
+            <section class="flex flexcolumn tengap fexgrowone fit-content">
                 <h3>Contact:</h3>
-                <div class="flex flexrow">
+                <div class="flex flexrow sixgap fit-content">
                     <img class="icon" src="./images/phone.svg" alt="phone icon">
                     <span>017685623723</span>
                 </div>
-                <div class="flex flexrow">
-                    <img class="icon" src="./images/email.svg" alt="email icon">
+                <div class="flex flexrow sixgap fit-content">
+                    <img class="icon" src="./images/emailat.svg" alt="email icon">
                     <span>shaghay3gh@gmail.com</span>
                 </div>
             </section>
-            <section>
+            <section class="flex flexcolumn tengap fit-content">
                 <h3>Find Me:</h3>
-                <div class="flex flexrow">
+                <div class="flex flexrow sixgap fit-content">
                     <img class="icon" src="./images/github.svg" alt="github icon">
                     <span>ShaQay3Q</span>
                 </div>
-                <div class="flex flexrow">
+                <div class="flex flexrow sixgap fit-content">
                     <img class="icon" src="./images/discord.svg" alt="discord icon">
                     <span>shaghay3gh_57080</span>
                 </div>
             </section>
-            <section>
+            <section class="flex flexcolumn tengap">
                 <h3>Upcoming Events:</h3>
-                <div class="flex flexrow fivegap">
+                <div class="flex flexrow sixgap">
                     <img class="icon" src="./images/event.svg" alt="event icon">
                     <span>Event Name</span>
                 </div>
-                <div class="flex flexrow fivegap">
+                <div class="flex flexrow sixgap">
                     <img class="icon" src="./images/event.svg" alt="event icon">
                     <span>Event Name</span>
                 </div>
-                <div class="flex flexrow fivegap">
+                <div class="flex flexrow sixgap">
                     <img class="icon" src="./images/event.svg" alt="event icon">
                     <span>Event Name</span>
                 </div>
             </section>
+            <div class="copy-right flex flexrow tengap align-items-center">
+                <img class="icon" src="./images/copyright.svg" alt="copy-right sign">
+                <span>Designed by Shaghayegh</span>
+            </div>
         </section>
     </footer>
 </body>
