--- a/main.html
+++ b/main.html
@@ -41,6 +41,12 @@
                     <li><a href="#">HOME</a></li>
                     <li><img class="icon" src="./images/searchone.svg" alt="serach icon"></li>
                 </ul>
+                <div>
+                    <hr>
+                    <ul class="flex align-items-center">
+                        <li id="burger-menu"></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </header>
